# RAG-sys

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: evaluate.py  health.py  ingest.py  query.py  router.py
app/core/: dependencies.py  exceptions.py  monitoring.py
app/models/: document.py
app/schemas/: evaluate.py  ingest.py  query.py
app/services/: chunking.py  embedding.py  evaluation.py  generation.py  hallucination.py  retrieval.py  vectorstore.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/evaluation/: page.tsx
frontend/src/app/ingestion/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/components/evaluation/: eval-table.tsx  metric-card.tsx  trend-chart.tsx
frontend/src/components/ingestion/: chunk-preview.tsx  config-panel.tsx  progress-bar.tsx  upload-zone.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/monitoring/: health-card.tsx  latency-charts.tsx  query-volume.tsx  stats-marquee.tsx
frontend/src/components/query/: answer-panel.tsx  chunk-card.tsx  latency-bar.tsx  search-bar.tsx
frontend/src/components/ui/: blur-fade.tsx  dot-pattern.tsx  marquee.tsx  number-ticker.tsx
frontend/src/lib/: api.ts  mock-data.ts
tests/: conftest.py
tests/test_api/: test_evaluate.py  test_health.py  test_ingest.py  test_query.py
tests/test_services/: test_chunking.py  test_evaluation.py  test_hallucination.py
